// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bland should replace all images with full path 1`] = `
[
  "tutorials/node.png",
  "tutorials/new_pathway.png",
  "tutorials/final_pathway.png",
  "tutorials/pathway_label.png",
  "tutorials/condition_eg.png",
  "tutorials/global_node.png",
  "tutorials/global_eg.png",
  "tutorials/default_node.png",
  "tutorials/transfer_node.png",
  "tutorials/end_node.png",
  "tutorials/kb_node.png",
  "tutorials/webhook_node.png",
  "tutorials/add_global_prompt.png",
  "tutorials/live_call_logs.png",
  "tutorials/pathway_chat.png",
  "tutorials/extract_variables.png",
  "tutorials/pathwaylog_finetune.png",
  "tutorials/finetuned.png",
  "tutorials/finetune.png",
]
`;

exports[`bland should replace all images with full path 2`] = `
[
  {
    "added": undefined,
    "count": 2,
    "removed": true,
    "value": "title: "Conversational Pathways"
description: "Gain greater control over your AI agent and the conversational flow. [Create a Pathway Now!](https://app.bland.ai/dashboard?page=convo-pathways)"
",
  },
  {
    "added": true,
    "count": 4,
    "removed": undefined,
    "value": "title: Conversational Pathways
description: >-
  Gain greater control over your AI agent and the conversational flow. [Create a
  Pathway Now!](https://app.bland.ai/dashboard?page=convo-pathways)
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/node.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/new_pathway.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/new_pathway.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/final_pathway.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/final_pathway.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/pathway_label.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/pathway_label.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/condition_eg.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/condition_eg.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/global_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/global_node.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/global_eg.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/global_eg.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/default_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/default_node.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/global_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/global_node.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/transfer_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/transfer_node.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/end_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/end_node.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/kb_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/kb_node.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/webhook_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/webhook_node.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/add_global_prompt.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/add_global_prompt.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/live_call_logs.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/live_call_logs.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/pathway_chat.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/pathway_chat.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/extract_variables.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/extract_variables.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/pathwaylog_finetune.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/pathwaylog_finetune.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/finetuned.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/finetuned.png" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/finetune.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="tutorials/finetune.png" />
",
  },
]
`;

exports[`bland should replace all images with full path 3`] = `
[
  {
    "added": undefined,
    "count": 2,
    "removed": true,
    "value": "title: "Conversational Pathways"
description: "Gain greater control over your AI agent and the conversational flow. [Create a Pathway Now!](https://app.bland.ai/dashboard?page=convo-pathways)"
",
  },
  {
    "added": true,
    "count": 4,
    "removed": undefined,
    "value": "title: Conversational Pathways
description: >-
  Gain greater control over your AI agent and the conversational flow. [Create a
  Pathway Now!](https://app.bland.ai/dashboard?page=convo-pathways)
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/new_pathway.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/final_pathway.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/pathway_label.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/condition_eg.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/global_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/global_eg.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/default_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/global_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/transfer_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/end_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/kb_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/webhook_node.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/add_global_prompt.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/live_call_logs.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/pathway_chat.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/extract_variables.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/pathwaylog_finetune.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/finetuned.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="/tutorials/finetune.png" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img style={{ borderRadius: "0.5rem" }} src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
]
`;

exports[`multimedia-file should replace all images with full path 1`] = `
[
  "my/docs/folder/image.png",
  "my/docs/folder/video.mp4",
  "../something/image.png",
  "my/another/Image.jpeg",
  "my/docs/folder/file.pdf",
]
`;

exports[`multimedia-file should replace all images with full path 2`] = `
[
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "![Image](./image.png)
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "![Image](my/docs/folder/image.png)
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "  <source src="./video.mp4" type="video/mp4" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "  <source src="my/docs/folder/video.mp4" type="video/mp4" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "![Image](../../../../something/image.png)
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "![Image](../something/image.png)
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img src="../../another/Image.jpeg" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img src="my/another/Image.jpeg" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<embed src="./file.pdf" width="800px" height="2100px" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<embed src="my/docs/folder/file.pdf" width="800px" height="2100px" />
",
  },
]
`;

exports[`multimedia-file should replace all images with full path 3`] = `
[
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "![Image](./image.png)
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "![Image](file:123e4567-e89b-12d3-a456-426655440000)
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "  <source src="./video.mp4" type="video/mp4" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "  <source src="file:123e4567-e89b-12d3-a456-426655440000" type="video/mp4" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "![Image](../../../../something/image.png)
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "![Image](file:123e4567-e89b-12d3-a456-426655440000)
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<img src="../../another/Image.jpeg" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<img src="file:123e4567-e89b-12d3-a456-426655440000" />
",
  },
  {
    "added": undefined,
    "count": 1,
    "removed": true,
    "value": "<embed src="./file.pdf" width="800px" height="2100px" />
",
  },
  {
    "added": true,
    "count": 1,
    "removed": undefined,
    "value": "<embed src="file:123e4567-e89b-12d3-a456-426655440000" width="800px" height="2100px" />
",
  },
]
`;

exports[`zep should replace all images with full path 1`] = `[]`;

exports[`zep should replace all images with full path 2`] = `[]`;

exports[`zep should replace all images with full path 3`] = `[]`;
